Scale the offline image correctly on mobile

--- a/landing-page/bloxelcom-cable/channels/styles.css
+++ b/landing-page/bloxelcom-cable/channels/styles.css
@@ -16,9 +16,8 @@ body, html {
     align-items: center;
 }
 
-.video-container, .image-container {
+.video-container; .image-container {
     width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
